[tool.poetry]
name = "mozmoderator"
version = "0.1.0"
description = "Mozilla Moderator"
authors = ["Tasos Katsoulas <akatsoulas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = "~5.2.0"
dj-database-url = "^3.1.2"
django-axes = "^8.3.1"
django-ses = "^4.7.2"
django-csp = "^4.0"
mozilla-django-oidc = "^5.0.2"
gunicorn = "^25.3.0"
whitenoise = "^6.5.0"
sentry-sdk = "^2.58.0"
boto3 = "^1.42.97"
python-decouple = "^3.8"
django-jinja = "^2.11.0"
mysqlclient = "^2.2.4"
django-uuslug = "^2.0.0"
django-ipware = "^7.0.1"
markdown = "^3.10.2"
pymdown-extensions = "^10.21.2"

[tool.poetry.group.dev.dependencies]
ipython = "^9.13.0"
ipdb = "^0.13.13"
black = "^26.3.1"
isort = "^8.0.1"
django-debug-toolbar = "^6.3.0"
flake8 = "^7.3.0"
django-extensions = "^4.1"
pytest = "^9.0.3"
pytest-django = "^4.12.0"
pytest-env = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
